<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.codeb1ooded.megha.scientificcalculator.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <Button
            android:id="@+id/button1"
            style="@style/rounded_button"
            android:text="@string/one"
            android:onClick="digitClicked"/>

        <Button
            android:id="@+id/button2"
            style="@style/rounded_button"
            android:text="@string/two"
            android:onClick="digitClicked"/>

        <Button
            android:id="@+id/button3"
            style="@style/rounded_button"
            android:text="@string/three"
            android:onClick="digitClicked"/>

        <Button
            android:id="@+id/buttonPlus"
            style="@style/rounded_button"
            android:text="@string/plus"
            android:onClick="operatorClicked"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/button4"
            style="@style/rounded_button"
            android:text="@string/four"
            android:onClick="digitClicked"/>

        <Button
            android:id="@+id/button5"
            style="@style/rounded_button"
            android:text="@string/five"
            android:onClick="digitClicked"/>

        <Button
            android:id="@+id/button6"
            style="@style/rounded_button"
            android:text="@string/six"
            android:onClick="digitClicked"/>

        <Button
            android:id="@+id/buttonMinus"
            style="@style/rounded_button"
            android:text="@string/minus"
            android:onClick="operatorClicked"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/button7"
            style="@style/rounded_button"
            android:text="@string/seven"
            android:onClick="digitClicked"/>

        <Button
            android:id="@+id/button8"
            style="@style/rounded_button"
            android:text="@string/eight"
            android:onClick="digitClicked"/>

        <Button
            android:id="@+id/button9"
            style="@style/rounded_button"
            android:text="@string/nine"
            android:onClick="digitClicked"/>

        <Button
            android:id="@+id/buttonMultiply"
            style="@style/rounded_button"
            android:text="@string/multiply"
            android:onClick="operatorClicked"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/buttonPeriod"
            style="@style/rounded_button"
            android:text="@string/period"
            android:onClick="periodClicked"/>

        <Button
            android:id="@+id/button0"
            style="@style/rounded_button"
            android:text="@string/zero"
            android:onClick="digitClicked"/>

        <Button
            android:id="@+id/buttonDivide"
            style="@style/rounded_button"
            android:text="@string/divide"
            android:onClick="operatorClicked"/>

        <Button
            android:id="@+id/buttonEqual"
            style="@style/rounded_button"
            android:text="@string/equal"
            android:onClick="equalClicked"/>
    </LinearLayout>

</LinearLayout>
