<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.codeb1ooded.megha.scientificcalculator.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <Button
            android:id="@+id/button1s"
            style="@style/rounded_button"
            android:text="@string/sine"
            android:onClick="operatorClicked"/>

        <Button
            android:id="@+id/button2s"
            style="@style/rounded_button"
            android:text="@string/cosine"
            android:onClick="operatorClicked"/>

        <Button
            android:id="@+id/button3s"
            style="@style/rounded_button"
            android:text="@string/tansane"
            android:onClick="operatorClicked"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/button4s"
            style="@style/rounded_button"
            android:text="@string/logarithm_base10"
            android:onClick="operatorClicked"/>

        <Button
            android:id="@+id/button5s"
            style="@style/rounded_button"
            android:text="@string/exponential"
            android:onClick="operatorClicked"/>

        <Button
            android:id="@+id/button6s"
            style="@style/rounded_button"
            android:text="@string/natural_logarithm"
            android:onClick="operatorClicked"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/button7s"
            style="@style/rounded_button"
            android:text="@string/square_root"
            android:onClick="operatorClicked"/>

        <Button
            android:id="@+id/button8s"
            style="@style/rounded_button"
            android:text="@string/power"
            android:onClick="powerClicked"/>

        <Button
            android:id="@+id/button9s"
            style="@style/rounded_button"
            android:text="@string/square"
            android:onClick="operatorClicked" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/button10s"
            style="@style/rounded_button"
            android:text="@string/bracket_open"
            android:onClick="operatorClicked"/>

        <Button
            android:id="@+id/button11s"
            style="@style/rounded_button"
            android:text="@string/bracket_close"
            android:onClick="operatorClicked"/>

        <Button
            android:id="@+id/button12s"
            style="@style/rounded_button"
            android:text="@string/factorial"
            android:onClick="operatorClicked"/>

    </LinearLayout>

</LinearLayout>
