<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.codeb1ooded.megha.scientificcalculator.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <Button
            android:id="@+id/button1a"
            style="@style/rounded_button"
            android:text="@string/sin_inverse"
            android:onClick="operatorClicked"/>

        <Button
            android:id="@+id/button2a"
            style="@style/rounded_button"
            android:text="@string/cos_inverse"
            android:onClick="operatorClicked"/>

        <Button
            android:id="@+id/button3a"
            style="@style/rounded_button"
            android:text="@string/tan_inverse"
            android:onClick="operatorClicked"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/button4a"
            style="@style/rounded_button"
            android:text="@string/floor_function"
            android:onClick="operatorClicked" />

        <Button
            android:id="@+id/button5a"
            style="@style/rounded_button"
            android:text="@string/ceiling_function"
            android:onClick="operatorClicked" />

        <Button
            android:id="@+id/button6a"
            style="@style/rounded_button"
            android:text="@string/pi_constant"
            android:onClick="piClicked" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/button7a"
            style="@style/rounded_button"
            android:text="@string/maximum"
            android:onClick="operatorClicked"/>

        <Button
            android:id="@+id/button8a"
            style="@style/rounded_button"
            android:text="@string/minimum"
            android:onClick="operatorClicked"/>

        <Button
            android:id="@+id/button9a"
            style="@style/rounded_button"
            android:text="@string/comma"
            android:onClick="operatorClicked"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/button10a"
            style="@style/rounded_button"
            android:text="@string/to_degrees"
            android:onClick="operatorClicked"/>

        <Button
            android:id="@+id/button11a"
            style="@style/rounded_button"
            android:text="@string/to_radians"
            android:onClick="operatorClicked"/>

    </LinearLayout>

</LinearLayout>
