<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/colorScreen"
    tools:context="com.codeb1ooded.megha.scientificcalculator.conversion_number_system.ConversionFromHexadecimal">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay">

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <TextView
        android:id="@+id/hexadecimal_input"
        android:hint="@string/hexadecimal_text"
        android:layout_below="@id/appbar"
        style="@style/input_text_view"/>

    <TextView
        android:id="@+id/output_for_hexadecimal"
        android:layout_below="@+id/hexadecimal_input"
        style="@style/input_text_view" />

    <LinearLayout
        android:id="@+id/convert_to_linear_layout"
        android:layout_below="@id/output_for_hexadecimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin">
        <Button
            android:id="@+id/to_binary"
            style="@style/rectangular_button"
            android:text="@string/binary"
            android:onClick="convertClicked"/>
        <Button
            android:id="@+id/to_octal"
            style="@style/rectangular_button"
            android:text="@string/octal"
            android:onClick="convertClicked"/>
        <Button
            android:id="@+id/to_decimal"
            style="@style/rectangular_button"
            android:text="@string/decimal"
            android:onClick="convertClicked"/>
        <Button
            android:id="@+id/to_hexadecimal"
            style="@style/rectangular_button"
            android:text="HEXA"
            android:onClick="convertClicked"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/hexadecimalClearButton"
        android:layout_below="@id/convert_to_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/periodButtonHexadecimal"
            style="@style/rounded_button"
            android:text="@string/period"
            android:onClick="periodClicked"/>
        <Button
            android:id="@+id/clearRightButtonHexadecimal"
            style="@style/rounded_button"
            android:text="@string/clear"
            android:onClick="clearClicked"/>
        <Button
            android:id="@+id/clearAllButtonHexadecimal"
            style="@style/rounded_button"
            android:text="@string/clearAll"
            android:onClick="clearAllClicked"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/hexadecimalButtons1"
        android:layout_below="@+id/hexadecimalClearButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/hexadecimal0"
            android:text="@string/zero"
            style="@style/rounded_button"
            android:onClick="zeroClicked"/>
        <Button
            android:id="@+id/hexadecima1"
            android:text="@string/one"
            style="@style/rounded_button"
            android:onClick="oneClicked"/>
        <Button
            android:id="@+id/hexadecimal2"
            android:text="@string/two"
            style="@style/rounded_button"
            android:onClick="twoClicked"/>
        <Button
            android:id="@+id/hexadecimal3"
            android:text="@string/three"
            style="@style/rounded_button"
            android:onClick="threeClicked"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/hexadecimalButtons2"
        android:layout_below="@+id/hexadecimalButtons1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/hexadecimal4"
            android:text="@string/four"
            style="@style/rounded_button"
            android:onClick="fourClicked"/>
        <Button
            android:id="@+id/hexadecimal5"
            android:text="@string/five"
            style="@style/rounded_button"
            android:onClick="fiveClicked"/>
        <Button
            android:id="@+id/hexadecimal6"
            android:text="@string/six"
            style="@style/rounded_button"
            android:onClick="sixClicked"/>
        <Button
            android:id="@+id/hexadecimal7"
            android:text="@string/seven"
            style="@style/rounded_button"
            android:onClick="sevenClicked"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/hexadecimalButtons3"
        android:layout_below="@+id/hexadecimalButtons2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/hexadecimal8"
            android:text="@string/eight"
            style="@style/rounded_button"
            android:onClick="eightClicked"/>
        <Button
            android:id="@+id/hexadecimal9"
            android:text="@string/nine"
            style="@style/rounded_button"
            android:onClick="nineClicked"/>
        <Button
            android:id="@+id/hexadecimal10"
            android:text="@string/ten"
            style="@style/rounded_button"
            android:onClick="aClicked"/>
        <Button
            android:id="@+id/hexadecimal11"
            android:text="@string/eleven"
            style="@style/rounded_button"
            android:onClick="bClicked"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/hexadecimalButtons4"
        android:layout_below="@+id/hexadecimalButtons3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/hexadecimal12"
            android:text="@string/twelve"
            style="@style/rounded_button"
            android:onClick="cClicked"/>
        <Button
            android:id="@+id/hexadecimal13"
            android:text="@string/thirteen"
            style="@style/rounded_button"
            android:onClick="dClicked"/>
        <Button
            android:id="@+id/hexadecimal14"
            android:text="@string/fourteen"
            style="@style/rounded_button"
            android:onClick="eClicked"/>
        <Button
            android:id="@+id/hexadecimal15"
            android:text="@string/fifteen"
            style="@style/rounded_button"
            android:onClick="fClicked"/>
    </LinearLayout>
</RelativeLayout>