<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/colorScreen"
    tools:context="com.codeb1ooded.megha.scientificcalculator.conversion_number_system.ConversionFromDecimal">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay">

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <TextView
        android:id="@+id/decimal_input"
        android:hint="@string/decimal_text"
        android:layout_below="@id/appbar"
        style="@style/input_text_view"/>

    <TextView
        android:id="@+id/output_for_decimal"
        android:layout_below="@+id/decimal_input"
        style="@style/input_text_view" />

    <LinearLayout
        android:id="@+id/convert_to_linear_layout"
        android:layout_below="@id/output_for_decimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin">
        <Button
            android:id="@+id/to_binary"
            style="@style/rectangular_button"
            android:text="@string/binary"
            android:onClick="convertClicked"/>
        <Button
            android:id="@+id/to_octal"
            style="@style/rectangular_button"
            android:text="@string/octal"
            android:onClick="convertClicked"/>
        <Button
            android:id="@+id/to_decimal"
            style="@style/rectangular_button"
            android:text="@string/decimal"
            android:onClick="convertClicked"/>
        <Button
            android:id="@+id/to_hexadecimal"
            style="@style/rectangular_button"
            android:text="HEXA"
            android:onClick="convertClicked"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/decimalClearButton"
        android:layout_below="@id/convert_to_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/periodButtonDecimal"
            android:text="@string/period"
            style="@style/rounded_button"
            android:onClick="periodClicked"/>
        <Button
            android:id="@+id/clearRightButtonDecimal"
            android:text="@string/clear"
            style="@style/rounded_button"
            android:onClick="clearClicked"/>
        <Button
            android:id="@+id/clearAllButtonDecimal"
            android:text="@string/clearAll"
            style="@style/rounded_button"
            android:onClick="clearAllClicked"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/decimalButtons1"
        android:layout_below="@+id/decimalClearButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/decimal1"
            android:text="@string/one"
            style="@style/rounded_button"
            android:onClick="oneClicked"/>
        <Button
            android:id="@+id/decimal2"
            android:text="@string/two"
            style="@style/rounded_button"
            android:onClick="twoClicked"/>
        <Button
            android:id="@+id/decimal3"
            android:text="@string/three"
            style="@style/rounded_button"
            android:onClick="threeClicked"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/decimalButtons2"
        android:layout_below="@+id/decimalButtons1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/decimal4"
            android:text="@string/four"
            style="@style/rounded_button"
            android:onClick="fourClicked"/>
        <Button
            android:id="@+id/decimal5"
            android:text="@string/five"
            style="@style/rounded_button"
            android:onClick="fiveClicked"/>
        <Button
            android:id="@+id/decimal6"
            android:text="@string/six"
            style="@style/rounded_button"
            android:onClick="sixClicked"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/decimalButtons3"
        android:layout_below="@+id/decimalButtons2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/decimal7"
            android:text="@string/seven"
            style="@style/rounded_button"
            android:onClick="sevenClicked"/>
        <Button
            android:id="@+id/decimal8"
            android:text="@string/eight"
            style="@style/rounded_button"
            android:onClick="eightClicked"/>
        <Button
            android:id="@+id/decimal9"
            android:text="@string/nine"
            style="@style/rounded_button"
            android:onClick="nineClicked"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/decimalButtons4"
        android:layout_below="@+id/decimalButtons3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/decimal0"
            android:text="@string/zero"
            style="@style/rounded_button"
            android:onClick="zeroClicked"/>
    </LinearLayout>

</RelativeLayout>